test/lit/pto/import_reserved_buffer_reject_ambiguous_sibling_symbol_a5.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s
// Guards peer lookup: multiple public sibling functions with the same symbol
// must not resolve by silently picking the first outer-module walk match.

module attributes {pto.target_arch = "a5"} {
  module attributes {pto.backend = "vpto"} {
    func.func @consumer() {
      %import = pto.import_reserved_buffer {
        name = "fifo",
        peer_func = @producer
      } -> i32
      return
    }
  }

  module attributes {pto.backend = "vpto"} {
    func.func public @producer() {
      %buffer = pto.reserve_buffer {
        name = "fifo",
        size = 4096,
        location = #pto.address_space<vec>,
        auto = true
      } -> i32
      return
    }
  }

  module attributes {pto.backend = "vpto"} {
    func.func public @producer() {
      %buffer = pto.reserve_buffer {
        name = "fifo",
        size = 4096,
        location = #pto.address_space<vec>,
        auto = true
      } -> i32
      return
    }
  }
}

// CHECK: error: 'pto.import_reserved_buffer' op expects 'peer_func' to reference an existing func.func
